objects/ssot__PatientHealthReaction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareObservationId__c</fullName>
        <label>Care Observation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CausativeSubstanceCodeId__c</fullName>
        <label>Causative Substance Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailsText__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosisSeverityCode__c</fullName>
        <label>Diagnosis Severity Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExposureRouteCodeId__c</fullName>
        <label>Exposure Route Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Health Reaction Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSelfReported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Self Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ManifestedSymptomId__c</fullName>
        <label>Manifested Symptom</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnsetDateTime__c</fullName>
        <label>Onset Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ParentReferenceRecordId__c</fullName>
        <label>Parent Reference Record</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentReferenceRecordObject__c</fullName>
        <label>Parent Reference Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReactionDateTime__c</fullName>
        <label>Reaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716483980447_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthReaction_CareObservatio_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>PatientHealthReaction_CareObservatio_rel</relationshipLabel>
        <relationshipName>rel_1716483980447_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721964333_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthReaction_CausativeSubst_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientHealthReaction_CausativeSubst_rel</relationshipLabel>
        <relationshipName>rel_1716721964333_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721974668_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientHealthReaction_ExposureRouteC_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientHealthReaction_ExposureRouteC_rel</relationshipLabel>
        <relationshipName>rel_1716721974668_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>